Adicionei um parágrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse sunt ad, cumque aut sit amet dicta aperiam modi omnis velit corrupti consequuntur sequi ipsum harum error, et placeat provident iste.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequatur inventore architecto ratione repellat aut totam accusantium illo officiis temporibus, amet esse, provident ullam necessitatibus possimus rem, placeat ipsa reiciendis.</p>
     
 </body>
 </html>
